# fastmail-cli-client

./: README.md  pyproject.toml
src/fastmail_cli/: __init__.py  cli.py  client.py
